--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "removeComments": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
-        "noEmitOnError": true,
-        "strict": true
-    }
+        // "noEmitOnError": true,
+        "strict": true,
+    },
+    "exclude": ["./tests/*"]
 }
